--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Develovers Life</string>
     <string name="developers_life">Developers Life</string>
     <string name="test_description">Успешно запустились на технологии совсем не предназначенной для этих целей.</string>
+    <string name="retry">Retry</string>
 </resources>
